--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ping Dashboard - Cosmos Blockchain Explorer And Web Wallet</title>
-    <meta name="description" content="Ping Dashboard is a block explorer/web wallet for blockchains built on Cosmos SDK, Cosmoshub, Osmosis, Juno, Evmos, Injective, Canto and 70+ blockchains listed on ping.pub" />
+    <title>Testnet Explorer - AstroStake</title>
+    <meta name="description" content="Explore the AstroStake Testnet with AstroStake Explorer! Get real-time data, monitor transactions, blocks, accounts, and validator status on your test network. Built on Cosmos SDK, AstroStake Explorer makes it easy to understand every detail of your Testnet." />
     <link rel="stylesheet" type="text/css" href="/loader.css" />    
   </head>
   <body>
@@ -23,11 +23,13 @@
     </div>
     <script type="module" src="/src/main.ts"></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SSBKVF3GMX"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-RH9S9HCJ4X"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-RH9S9HCJ4X');
+      </script>
       // Set default consent to 'denied' as a placeholder
       // Determine actual values based on your own requirements
       gtag('consent', 'default', {
