configure logo and text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://www.astrostake.xyz/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testnet Explorer - AstroStake</title>
     <meta name="description" content="Explore the AstroStake Testnet with AstroStake Explorer! Get real-time data, monitor transactions, blocks, accounts, and validator status on your test network. Built on Cosmos SDK, AstroStake Explorer makes it easy to understand every detail of your Testnet." />
@@ -24,22 +24,12 @@
     <script type="module" src="/src/main.ts"></script>
     <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-RH9S9HCJ4X"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-RH9S9HCJ4X');
-      </script>
-      // Set default consent to 'denied' as a placeholder
-      // Determine actual values based on your own requirements
-      gtag('consent', 'default', {
-        'ad_storage': 'denied',
-        'ad_user_data': 'denied',
-        'ad_personalization': 'denied',
-        'analytics_storage': 'denied'
-      });
-      gtag('config', 'G-SSBKVF3GMX');
-    </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-RH9S9HCJ4X');
+  </script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ping-pub/widget@latest/dist/widget.min.js"></script>
 
   </body>
